--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "babel-plugin-react-compiler": "^19.1.0-rc.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
     },
